--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.19.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +65,10 @@ flutter:
   assets:
     - assets/images/splash.png
     - assets/images/scoreIcon.png
+    - assets/images/vowel.png
+    - assets/images/consonant.png
+    - assets/images/diacritics.png
+    - assets/images/conjunct-diacritic.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
