--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
     sdk: flutter
   provider: ^6.1.2
   carousel_slider: ^5.0.0
+  tflite_flutter: ^0.11.0
+  image: ^4.3.0
     
 
 dev_dependencies:
@@ -74,6 +76,7 @@ flutter:
     - assets/images/consonant.png
     - assets/images/diacritics.png
     - assets/images/conjunct-diacritic.png
+    - assets/models/character_recognition_model.tflite
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
