--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/images/diacritics.png
     - assets/images/conjunct-diacritic.png
     - assets/models/character_recognition_model.tflite
+    - assets/models/chakma_character_recognition_model.tflite
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
