Localization and Localstorage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   carousel_slider: ^5.0.0
   tflite_flutter: ^0.11.0
   image: ^4.3.0
+  shared_preferences: ^2.3.2
     
 
 dev_dependencies:
@@ -76,6 +77,9 @@ flutter:
     - assets/images/consonant.png
     - assets/images/diacritics.png
     - assets/images/conjunct-diacritic.png
+    - assets/images/snackbar-image1.png
+    - assets/images/snackbar-image2.png
+    - assets/images/congratulations.png
     - assets/models/character_recognition_model.tflite
     - assets/models/chakma_character_recognition_model.tflite
   #   - images/a_dot_ham.jpeg
