--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   tflite_flutter: ^0.11.0
   image: ^4.3.0
   shared_preferences: ^2.3.2
+  percent_indicator: ^4.2.3
+  http: ^1.2.2
     
 
 dev_dependencies:
