--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.3.2
   percent_indicator: ^4.2.3
   http: ^1.2.2
+  font_awesome_flutter: ^10.8.0
     
 
 dev_dependencies:
@@ -82,6 +83,10 @@ flutter:
     - assets/images/snackbar-image1.png
     - assets/images/snackbar-image2.png
     - assets/images/congratulations.png
+    - assets/images/cards/vowel.png
+    - assets/images/cards/consonant.png
+    - assets/images/cards/number.png
+    - assets/images/cards/diacritic.png
     - assets/models/character_recognition_model.tflite
     - assets/models/chakma_character_recognition_model.tflite
   #   - images/a_dot_ham.jpeg
