--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   percent_indicator: ^4.2.3
   http: ^1.2.2
   font_awesome_flutter: ^10.8.0
+  confetti: ^0.8.0
     
 
 dev_dependencies:
@@ -82,6 +83,7 @@ flutter:
     - assets/images/conjunct-diacritic.png
     - assets/images/snackbar-image1.png
     - assets/images/snackbar-image2.png
+    - assets/images/snackbar1.png
     - assets/images/congratulations.png
     - assets/images/cards/vowel.png
     - assets/images/cards/consonant.png
