--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   http: ^1.2.2
   font_awesome_flutter: ^10.8.0
   confetti: ^0.8.0
+  connectivity_plus: ^6.1.0
     
 
 dev_dependencies:
